# Data.FastSequence

./: Data.FastSequence.cabal  LICENSE  README  fastsequence.cabal
Data/: FastSequence.hs  FastSequenceTest.hs  VectorNode.hs  WideSequence-Test.hs
src/Data/: FastSequence.hs  VectorNode.hs
test/: FastSequenceTest.hs
