Name:                fastsequence
-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1
Synopsis:            A replacement for Data.Sequence that uses wide-fanout finger trees
Description:

         This library is designed to be a drop-in replacement for the
         Haskell Data.Sequence library from the containers package,
         originally written by Ross Patterson and Ralf Hinze and
         documented at
         http://hackage.haskell.org/packages/archive/containers/0.4.2.1/doc/html/Data-Sequence.html.
         Like Data.Sequence, Data.FastSequence makes use of finger
         trees in order to provide O(lg n) concatenation and indexing.
         However, it uses much wider vector-style nodes rather than
         the 2-3 tree nodes used in Data.Sequence.  It is intended to
         run faster in practice than Data.Sequence; substantial
         performance regressions should be considered a bug.  For now,
         though, the code is still under development and testing.

Homepage:            https://github.com/jmaessen/Data.FastSequence
License:             BSD3
License-file:        LICENSE
Author:              Jan-Willem Maessen
Maintainer:          jmaessen@alum.mit.edu
Copyright:           2012 Jan-Willem Maessen
Category:            Data
Build-type:          Simple
Extra-source-files:  README
Cabal-version:       >=1.10


Library
  -- Modules exported by the library.
  Exposed-modules:     Data.FastSequence
  Other-modules:       Data.VectorNode
  build-depends:       base, vector
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-matches -O2

test-suite FastSequenceTest
  type:                exitcode-stdio-1.0
  main-is:             FastSequenceTest.hs
  build-depends:       base, vector, QuickCheck, test-framework, test-framework-quickcheck2, mtl
  hs-source-dirs:      src test